    #2038017: Address: display of phone numbers
    #2045683: Jobs: review display
    #2044973: Photo gallery: review display
    #2060531: Module upgrade: apachesolr_attachments
    #2060535: Module upgrade: features
    #2056233: Module upgrade: extlink
    #2056229: Module upgrade: apachesolr
    #2044957: Photo gallery: column block
    #2060283: Photo Gallery : Overlay not themed
    #Other :
      - Add a Drush command file to the profile
      - Change patch from issue #1772316 (related to core changes, issue still not fixed)

  * Core update:
      Drupal 7.23

  * Modules updated:
      Contrib
        - Apache Solr Attachments (1.3)
        - Features (2.0-rc2)
        - Extlink (1.13)
        - Apache Solr (1.4)

  * Patches:
      Contrib
        - Sharethis: #2044081: ShareThis buttons not visible in content area

30 July 2013 - Version 7.x-1.0-beta4
------------------------------------

  * Issues:
    #2049927: Module upgrade: beididp
    #2027615: Page title: user_cancel warning
    #2048339: Installation screen: order functionalities
    #2048401: Installer: use db_select in openfed_blocks.inc
    #2043085: Apache Solr - Feature deployement fail (comment #6), remove Apache Solr Confgen module
    #2043987: Apache solr feature: file rename
    #2043183: View CMS filters, language
    #2048235: Library update: ckeditor
    #2025003: Enable user mail translation by default
    #2049959: Remove module: performance
    #2050013: Remove module: devel
    #2045841: All content types: read more
    #2051121: Remove module: waia_integration
    #2045627: Download: review display
    #2050941: Disable Backup and Migrate by default
    #2050945: Disable aggregator by default
    #2050929: Enable rdf by default
    #2043085: Apache Solr - Feature deployment fails (comment #11), remove Apache Solr feature
    #Others :
      - Make use of Drupal Database API instead of db_query across the distribution (related to #2048401)